# knowrob_intro

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml  setup.py
.github/workflows/: docker-publish.yml
documentation/: change_ontology.md  read_ontology.md
launch/: example_exercise_prolog.launch  example_knowrob_owl_and_prolog.launch  example_owl_kb_and_prolog_rules.launch  example_query_prolog.launch  example_situation_calculus.launch  knowrob_intro.launch
owl/: catalog-v001.xml  krr_exercise.owl  pick_place.owl
scripts/: example_exercise_prolog.py  example_node.py  example_owl_kb_prolog_rules.py  example_query_owl.py  example_query_prolog.py  example_sc.py  exercise.py  solution.py  solutions_q1.py  solutions_q2.py  solutions_q2_tricky.py
src/: __init__.pl  example_exercise.pl  owl_kb_prolog_rules.pl  owl_sc_planning.pl  prolog_kb.pl  sc_planning.pl
src/knowrob_intro/: __init__.py  my_module.pl  prolog_query.py
